# tuxedo

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: api_example.py
src/tuxedo/: __init__.py  analysis.py  cli.py  clustering.py  database.py  grobid.py  logging.py  models.py  project.py  tui.py
tests/: conftest.py  test_analysis.py  test_api.py  test_cli.py  test_clustering.py  test_database.py  test_error_recovery.py  test_exports.py  test_grobid.py  test_integration.py  test_models.py  test_project.py  test_tui.py
