[project]
name = "tuxedo"
version = "0.1.0"
description = "TUI app for organizing systematic literature review papers using LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.89.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
tuxedo = "tuxedo.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tuxedo"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "radon>=6.0.1",
]
